--- a/assets/HTML/index.html
+++ b/assets/HTML/index.html
@@ -27,7 +27,7 @@
             <div class="Grade-Back">
                 <label for="Grade" class="label-Grade">مقطع تحصیلی</label>
                 <select id="Grade" class="Grade-select">
-                    <option selected hidden="hidden">انتخاب کن</option>
+                    <option selected hidden="hidden" value="">انتخاب کن</option>
                     <option value="ابتدایی">ابتدایی</option>
                     <option value="متوسطه اول">متوسطه اول</option>
                     <option value="متوسطه دوم">متوسطه دوم</option>
