--- a/assets/HTML/index.html
+++ b/assets/HTML/index.html
@@ -44,6 +44,19 @@
         </form>
     </div>
 </div>
+<div class="Back-list">
+    <div class="Front-list">
+        <table class="Person-table">
+            <tr class="Tag-list">
+                <th>نام</th>
+                <th>نام‌خانوادگی</th>
+                <th>سن</th>
+                <th>مقطع تحصیلی</th>
+                <th>آدرس</th>
+            </tr>
+        </table>
+    </div>
+</div>
 <script src="../JS/Back2.js"></script>
 </body>
 </html>
