--- a/assets/HTML/index.html
+++ b/assets/HTML/index.html
@@ -39,15 +39,16 @@
                 <textarea id="Address" class="Address-input" cols="30" rows="10"></textarea>
             </div>
             <div class="Submit-Back">
-                <button type="submit" class="Submit">ثبت</button>
+                <button type="submit" class="Submit" >ثبت</button>
             </div>
         </form>
     </div>
 </div>
 <div class="Back-list">
     <div class="Front-list">
-        <table class="Person-table">
+        <table class="Person-table" id="User-input">
             <tr class="Tag-list">
+                <th>شماره</th>
                 <th>نام</th>
                 <th>نام‌خانوادگی</th>
                 <th>سن</th>
