--- a/assets/HTML/index.html
+++ b/assets/HTML/index.html
@@ -41,6 +41,10 @@
             <div class="Submit-Back">
                 <button type="submit" class="Submit" >ثبت</button>
             </div>
+            <div class="Search-Back">
+                <label for="search-input" class="label-Search">جستوجو</label>
+                <input type="search" onkeydown="searchByName()" id="search-input" class="Search-input">
+            </div>
         </form>
     </div>
 </div>
@@ -48,12 +52,12 @@
     <div class="Front-list">
         <table class="Person-table" id="User-input">
             <tr class="Tag-list">
-                <th>شماره</th>
                 <th>نام</th>
                 <th>نام‌خانوادگی</th>
                 <th>سن</th>
                 <th>مقطع تحصیلی</th>
                 <th>آدرس</th>
+                <th></th>
             </tr>
         </table>
     </div>
