this change is for search and add person and remove person this All problems were solved

--- a/assets/HTML/index.html
+++ b/assets/HTML/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" href="../CSS/Style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Title</title>
@@ -60,12 +60,13 @@
     <div class="Front-list">
         <table class="Person-table">
             <thead class="Tag-list">
-                <th>نام</th>
-                <th>نام‌خانوادگی</th>
-                <th>سن</th>
-                <th>مقطع تحصیلی</th>
-                <th>آدرس</th>
-                <th></th>
+                <th class="tag">نام</th>
+                <th class="tag">نام‌خانوادگی</th>
+                <th class="tag">سن</th>
+                <th class="tag">مقطع تحصیلی</th>
+                <th class="tag">قیمت اصلی</th>
+                <th class="tag">آدرس</th>
+                <th class="tag"></th>
             </thead>
             <tbody id="User-input">
 
@@ -73,6 +74,9 @@
         </table>
     </div>
 </div>
+<script src="https://kit.fontawesome.com/52ee5253f4.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.min.js"></script>
 <script src="../JS/Back2.js"></script>
+
 </body>
 </html>
